// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete project 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI</a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects</a>
    </li>
    <!--if-->
    <!--if-->
    <li></li>
  </ul>
  <!--BreadCrumb-->
  <!--if-->
  <!--FlushPageDataLoading-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`delete project 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI</a>
</header>
<!--Header-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\" class=\\"\\">Projects</a>
    </li>
    <li>
      <a href=\\"projects/1\\" class=\\"\\">Test</a>
    </li>
    <!--if-->
    <!--if-->
    <li>Delete</li>
  </ul>
  <!--BreadCrumb-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"modal\\">
    <div class=\\"content\\">
      <div class=\\"header\\">Delete project</div>
      <div class=\\"body\\">Do you want delete project \\"Test\\"?</div>
      <div class=\\"footer\\">
        <button class=\\"ok danger\\"><span>Confirm</span></button>
        <button class=\\"cancel\\"><span>Cancel</span></button>
      </div>
    </div>
  </div>
  <!--ConfirmModal-->
  <!--if-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`delete project 3`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI</a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
